Добавил эндпоинты для получения колоды и папки из базы данных. Вернул запуск базы данных через sqlite.
