# models/deck.go
@@ -1,5 +1,7 @@
 package models
 
+import "gorm.io/gorm"
+
 type Deck struct {
 	Base
 	Name           string `gorm:"size:255; not null"`
@@ -10,4 +12,26 @@ type Deck struct {
 	Cards          []Card
 	Permissions    []Permission    `gorm:"polymorphic:Storage;polymorphicValue:deck"`
 	StorageHasTags []StorageHasTag `gorm:"polymorphic:Storage;polymorphicValue:deck"`
+}
+
+func FetchDeckById(db *gorm.DB, id string) (*Deck, error) {
+	var deck Deck
+
+	err := db.First(&deck, id).Error
+	if err != nil {
+		return nil, err
+	}
+
+	return &deck, nil
+}
+
+func FetchDecksByParentId(db *gorm.DB, parentFolderId string) (*[]Deck, error) {
+	var decks []Deck
+
+	err := db.Find(&decks, "parent_folder_id = ?", parentFolderId).Error
+	if err != nil {
+		return nil, err
+	}
+
+	return &decks, nil
 }
