# models/folder.go
@@ -1,5 +1,7 @@
 package models
 
+import "gorm.io/gorm"
+
 type Folder struct {
 	Base
 	Name           string `gorm:"size:255; not null"`
@@ -9,4 +11,26 @@ type Folder struct {
 	ParentFolder   *Folder
 	Permissions    []Permission    `gorm:"polymorphic:Storage;polymorphicValue:folder"`
 	StorageHasTags []StorageHasTag `gorm:"polymorphic:Storage;polymorphicValue:folder"`
+}
+
+func FetchFolderById(db *gorm.DB, id string) (*Folder, error) {
+	var folder Folder
+
+	err := db.First(&folder, id).Error
+	if err != nil {
+		return nil, err
+	}
+
+	return &folder, nil
+}
+
+func FetchFoldersByParentFolderId(db *gorm.DB, parentFolderId string) (*[]Folder, error) {
+	var folders []Folder
+
+	err := db.Find(&folders, "parent_folder_id = ?", parentFolderId).Error
+	if err != nil {
+		return nil, err
+	}
+
+	return &folders, nil
 }
